--- a/zest_station/css/less/variables.less
+++ b/zest_station/css/less/variables.less
@@ -2,6 +2,7 @@
 ==========================================================*/
 	@white: 			#fff;
 	@black: 			#2a2727;
+	@red: 				#f30404;
 
 /* 2. TYPE
 ==========================================================*/
