--- a/zest_station/css/themes/conscious/theme.less
+++ b/zest_station/css/themes/conscious/theme.less
@@ -39,6 +39,11 @@
 		&.icon-oos {
 			fill: @white;
 		}
+		&.icon-arrow-left,
+        &.icon-arrow-right {
+            fill: none;
+            stroke: @white;
+        }
 	}
 
     .logo-svg{
