--- a/zest_station/css/themes/epik/theme.less
+++ b/zest_station/css/themes/epik/theme.less
@@ -36,6 +36,12 @@
 		&.icon-oos {
 			fill: @white;
 		}
+		&.icon-arrow-left,
+        &.icon-arrow-right {
+            fill: none;
+            stroke: @white;
+        }
+
 	}
     .logo-svg{
         background-image: url("../css/themes/epik/logo.svg");
@@ -52,7 +58,7 @@
 	
 	#epik {
 
-		.button:not(.transparent):not(.blank):not(.option) {
+		.button:not(.transparent):not(.blank):not(.option):not([disabled]):not(.disabled) {
 			background: fade(@actionBackground, 80%);
 		}
 
