--- a/zest_station/css/themes/public/theme.less
+++ b/zest_station/css/themes/public/theme.less
@@ -40,6 +40,11 @@
 		&.icon-oos {
 			fill: @brandColor;
 		}
+		&.icon-arrow-left,
+        &.icon-arrow-right {
+            fill: none;
+            stroke: @white;
+        }
 	}
 
 
@@ -72,6 +77,13 @@
 		select {
 			box-shadow: 1px 1px 0 rgba(0,0,0,.1);
 			#rounded > .round(2px);
+		}
+
+		.button {
+			&.disabled,
+			&[disabled] {
+				background: rgba(0,0,0,0.2);
+			}
 		}
 
 		.entry.input {
@@ -130,6 +142,20 @@
 				background-color: @brandColor;
 			}
 		} 
+
+		.add-on-list {
+	    	li {
+
+	    		&:not(.selected){
+	    			border-color: rgba(0,0,0,0.05);
+
+		    		.add-on-content {
+		    			background: rgba(0,0,0,0.05);
+		    		}
+	    		}
+	    		
+	    	}
+	    }
 
 		#textual,
 		.popup {
