--- a/zest_station/css/themes/zoku/theme.less
+++ b/zest_station/css/themes/zoku/theme.less
@@ -33,6 +33,11 @@
                 background-position: 100px !important;
 		&.icon-create-key,
 		&.icon-no-print { stroke: @white; }
+		&.icon-arrow-left,
+        &.icon-arrow-right {
+            fill: none;
+            stroke: @white;
+        }
 	}
 
     .logo-svg{
@@ -90,3 +95,17 @@
 .no-main-bg{
 	background-image: none !important;
 }
+
+/* 4. LAYOUT
+==========================================================*/
+
+    #zoku {
+        .add-on {
+            .button.transparent {
+                background-color: fade(@black, 15);
+                &:not(.text-red) {
+                    color: @black;
+                }
+            }
+        }
+    }
