CICO-38229 addon html and controller

--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -178,7 +178,7 @@
 
 		.popup {
 	        .popup-content {
-	             .button:not(.transparent) { {
+	             .button:not(.transparent) { 
 	            	color: @white;
 	                background: @brandColor;
 	            }
