--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -626,7 +626,7 @@
  
 
  /* Add Ons **/
-
+   
     .add-on {
         .add-on-picture {
             width: 40%;
@@ -713,6 +713,31 @@
             .add-on-content {
                 background-color: @actionBackground;
                 color: @actionColor;
+            }
+        }
+    }
+
+     .popup .popup-content.add-on {
+        padding: 0;
+        border: 3px solid #fff;
+        width: 450px;
+        .add-on-picture {
+            width: 100%;
+            height: 190px;
+        }
+        .add-on-content {
+            width: 100%;
+            padding: 20px;
+            .price .action {
+                width: 100%; 
+                display: -webkit-box; 
+                display: -webkit-flex;
+                display: flex;
+                -webkit-flex-flow: row wrap; 
+                flex-flow: row wrap;
+                -webkit-justify-content: space-between;
+                justify-content: space-between; 
+                margin-top: 20px;
             }
         }
     }
