CICO-38229 fixing style issues

--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -548,3 +548,14 @@
 .jumper{
     background-color: @backgroundColor !important; 
 }
+
+/* ADDON
+ ==========================================================*/
+#yotel {
+    .add-on.selected {
+        .add-on-content{
+            color: #fff;
+            background-color: #53246d;
+        }
+    }
+ }
