--- a/rover/partials/workManagement/rvWorkManagementMultiSheet.html
+++ b/rover/partials/workManagement/rvWorkManagementMultiSheet.html
@@ -181,9 +181,11 @@
                                     </span>
                                 </h3>
                                 <span class="task">{{task.task_name}}</span>
-                                <span ng-show="task.is_vip" class="vip" translate>VIP</span>
+                                <span ng-show="room.is_vip" class="vip" translate>VIP</span>
                                 <!-- If task is completed, IT SHOULD BE LOCKED AND USER SHOULD NOT BE ABLE TO MOVE IT. Also, add:-->
                                 <span class="icons icon-ok-10" ng-show="task.is_completed"></span>
+                                <!--This is a dummy to be shown when the the task is not completed. This placeholder will keep the print position of the VIP icon-->
+                                <span class="icons icon-ok-10 no-icon" style="background:none" ng-show="!task.is_completed"></span>
                             </li>
                         </ul>
                     </div>
