CICO-31474: added style to show the dummy with no icon

--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -2945,6 +2945,11 @@
                     .square(16pt);
                     .show;
                 }
+
+                &.no-icon:before {
+                    content: none;
+                    border: none;
+                }
             }
 
             .vip {
