--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -626,6 +626,21 @@
  
 
  /* Add Ons **/
+    #upgrades{
+        overflow: hidden;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex-flow: row wrap;
+        flex-flow: row wrap;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-align-items: center;
+        align-items: center;
+    }
+    .addon-screen#main {
+        padding-top: 60px;
+    }
    
     .add-on {
         .add-on-picture {
