--- a/rover/partials/dashboard/rvDbGuestsSection.html
+++ b/rover/partials/dashboard/rvDbGuestsSection.html
@@ -1,4 +1,4 @@
-<div bindonce="statisticsData" id="dashboard-guests" class="dashboard-block with-actions" ng-controller="rvDashboardGuestWidgetController">
+<div id="dashboard-guests" class="dashboard-block with-actions" ng-controller="rvDashboardGuestWidgetController">
     <div ng-include="'/assets/partials/common/notification_message.html'"></div>
     <h3>Guests</h3>
     <!-- <button ui-sref="rover.reservation.staycard.mainCard.summaryAndConfirmFromOutide({'room_id':['180','181'],'arrival_date':'2014-07-15','departure_date':'2014-07-16', 'arrival_time': '04:30', 'departure_time': '09:15'})">GO TO CONFIRMATION RESERVATION SCREEN</button>    -->
@@ -6,86 +6,86 @@
     <ul class="actions">
         <li>
             <a class="button green" ng-click="clickedOnGuestsToday($event, 'DUEIN', statisticsData.guests.checking_in)">
-                <strong bo-text="statisticsData.guests.checking_in"></strong> Arrivals
+                <strong>{{ ::statisticsData.guests.checking_in }}</strong> Arrivals
             </a>
         </li>
         <li ng-if="statisticsData.guests.is_pre_checkin_only =='true' && statisticsData.guests.checkin_action !== 'auto_checkin'">
             <a ng-click="clickedOnGuestsToday($event, 'PRE_CHECKIN', statisticsData.guests.pre_check_in)" class="button orange">
-                <strong bo-text="statisticsData.guests.pre_check_in"></strong>
+                <strong>{{ ::statisticsData.guests.pre_check_in }}</strong>
                 <span>Pre Check In</span>
             </a>
         </li>
         <li ng-if="statisticsData.guests.is_pre_checkin_only =='true' && statisticsData.guests.checkin_action === 'auto_checkin'">
             <a ng-click="clickedOnGuestsToday($event, 'PRE_CHECKIN', statisticsData.guests.pre_check_in,'MOBILE_CHECKIN')" class="button orange">
-                <strong bo-text="statisticsData.guests.pre_check_in"></strong>
+                <strong>{{ ::statisticsData.guests.pre_check_in }}</strong>
                 <span translate>MOBILE_CHECKIN</span>
             </a>
         </li>
         <li ng-if="isQueuedRoomsTurnedOn && shouldShowLateCheckout">
             <a class="button white red-text" ng-click="clickedOnQueuedRoomsIcon()">
-                <strong bo-text="statisticsData.guests.queued"></strong>Queued</a>
+                <strong>{{ ::statisticsData.guests.queued }}</strong>Queued</a>
         </li>
         <li>
             <a class="button blue" ng-click="clickedOnGuestsToday($event, 'INHOUSE', statisticsData.guests.in_house)">
-                <strong bo-text="statisticsData.guests.in_house"></strong> Stayovers
+                <strong>{{ ::statisticsData.guests.in_house }}</strong> Stayovers
             </a>
         </li>
         <li>
             <a class="button red" ng-click="clickedOnGuestsToday($event, 'DUEOUT', statisticsData.guests.checking_out)">
-                <strong bo-text="statisticsData.guests.checking_out"></strong> Departures
+                <strong>{{ ::statisticsData.guests.checking_out }}</strong> Departures
             </a>
         </li>
         <li ng-if="statisticsData.guests.open_bill_checkout > 0 ">
             <a class="button red" ng-click="clickedOnGuestsToday($event, 'OPEN_BILL_CHECKOUT', statisticsData.guests.open_bill_checkout)">
-                <strong bo-text="statisticsData.guests.open_bill_checkout"></strong> Checked Out<span>(with balance)</span>
+                <strong>{{ ::statisticsData.guests.open_bill_checkout }}</strong> Checked Out<span>(with balance)</span>
             </a>
         </li>
         <li ng-if="isLateCheckoutTurnedOn && shouldShowLateCheckout">
             <a class="button red" ng-click="clickedOnHeaderLateCheckoutIcon($event)">
-                <strong bo-text="statisticsData.guests.late_checkout"></strong> Late check out
+                <strong>{{ ::statisticsData.guests.late_checkout }}</strong> Late check out
             </a>
         </li>
         <li>
             <a class="button yellow" ng-click="clickedOnGuestsToday($event, 'VIP', statisticsData.guests.vip)">
-                <strong bo-text="statisticsData.guests.vip"></strong> VIPs
+                <strong>{{ ::statisticsData.guests.vip }}</strong> VIPs
             </a>
         </li>
     </ul>
     <ul class="data">
         <li>
             Arrivals 
-            <strong class="value green" bo-text="statisticsData.guests.checking_in"></strong>
+            <strong class="value green">{{ ::statisticsData.guests.checking_in }}</strong>
         </li>
         <li ng-if="statisticsData.guests.is_pre_checkin_only =='true' && statisticsData.guests.checkin_action === 'auto_checkin'">
             Mobile Check In
-            <strong class="value orange" bo-text="statisticsData.guests.pre_check_in"></strong>
+            <strong class="value orange">{{ ::statisticsData.guests.pre_check_in }}</strong>
         </li>
         <li ng-if="statisticsData.guests.is_pre_checkin_only =='true' && statisticsData.guests.checkin_action !== 'auto_checkin'">
             Pre Check In
-            <strong class="value orange" bo-text="statisticsData.guests.pre_check_in"></strong>
+            <strong class="value orange">{{ ::statisticsData.guests.pre_check_in }}</strong>
         </li>
         <li ng-if="isQueuedRoomsTurnedOn && shouldShowLateCheckout">
             Queued
-            <strong class="value green" bo-text="userInfo.queue_rooms_count"></strong></li>
+            <strong class="value green">{{ ::userInfo.queue_rooms_count }}</strong></li>
         <li>
             Departures
-            <strong class="value red" bo-text="statisticsData.guests.checking_out"></strong>
+            <strong class="value red">{{ ::statisticsData.guests.checking_out }}</strong>
         </li>
         <li ng-if="statisticsData.guests.open_bill_checkout > 0 ">
             Checked Out (With Balance)
-            <strong class="value red" bo-text="statisticsData.guests.open_bill_checkout"></strong>
+            <strong class="value red">{{ ::statisticsData.guests.open_bill_checkout }}</strong>
         </li>
         <li ng-if="isLateCheckoutTurnedOn && shouldShowLateCheckout">
             Late Check Out
-            <strong class="value red" bo-text="userInfo.late_checkout_count"></strong>
+            <strong class="value red">{{ ::userInfo.late_checkout_count }}</strong>
         </li>
         <li>
             In-house
-            <strong class="value blue" bo-text="statisticsData.guests.in_house"></strong>
+            <strong class="value blue">{{ ::statisticsData.guests.in_house }}</strong>
         </li>
         <li>
             VIPs
-            <strong class="value yellow" bo-text="statisticsData.guests.vip"></strong>
+            <strong class="value yellow">{{ ::statisticsData.guests.vip }}</strong>
         </li>
     </ul>
 </div>
