--- a/rover/partials/housekeeping/rvHkRoomStatus.html
+++ b/rover/partials/housekeeping/rvHkRoomStatus.html
@@ -113,7 +113,7 @@
 </div>
 
 <!-- Rooms list -->
-<section id="rooms" class="content scrollable" bindonce bo-class="{'no-options': !isStandAlone}" ng-class="{'has-summary': hasActiveWorkSheet, 'hidden': currentView == 'summary', 'has-pagination': (!disablePrevBtn || !disableNextBtn)}" div-touch-move-stop-propogate> <!-- Add class "has-pagination" if pagination will exist on tablets -->
+<section id="rooms" class="content scrollable" ng-class="{'has-summary': hasActiveWorkSheet, 'hidden': currentView == 'summary', 'has-pagination': (!disablePrevBtn || !disableNextBtn), 'no-options': !isStandAlone}" div-touch-move-stop-propogate> <!-- Add class "has-pagination" if pagination will exist on tablets -->
     <ul class="search-results" ng-hide="uiTotalCount == 0">
         <li class="mobile-pagination" ng-show="!filterOpen && (!disablePrevBtn || !disableNextBtn)">
             <p class="page-count">Showing <strong>{{ resultFrom }}-{{ resultUpto }}</strong> of <strong>{{ netTotalCount }}</strong> items</p>
@@ -121,7 +121,7 @@
             <p class="pull-msg" ng-show="disablePrevBtn">Pull down to refresh page</p>
         </li>
 
-        <li class="room" bindonce ng-repeat="room in rooms track by $index" emit-when="{event: 'ALL_RENDERED', condition: $last}">
+        <li class="room" ng-repeat="room in rooms track by $index" emit-when="{event: 'ALL_RENDERED', condition: $last}">
             <div ng-if="isStandAlone" class="check">
                 <label class="checkbox inline" for="{{ room.id }}" ng-click="roomSelectChange(room, $index)">
                     <span class="icon-form icon-checkbox" ng-class="{ 'checked' : room.selected }"></span>
@@ -133,7 +133,7 @@
 
                 <div class="room-info" ng-class="{ 'on-hold': room.is_on_hold }">
                     <h2 class="{{ room.roomStatusClass }}">
-                        <span bo-text="room.room_no"></span>
+                        <span>{{ ::room.room_no }}</span>
                         <span class="icons icon-suite" ng-show="room.is_suite">Suite Room</span>
                     </h2> <!-- If room is ooo or oos, class should be 'out'. Otherwise, use {room-status} -->
                     <span class="room-type">{{room.room_type.name}}</span>
@@ -144,15 +144,15 @@
                 <div class="reservation-status">
                     <!-- {reservation-status} can be late-checkout-out, check-out(for due out or departed) or inhouse(for stayover) -->
                     <div class="current {{ room.leaveStatusClass }}">
-                      <span class="guest-status {{ room.leaveStatusClass }}" bo-text="room.room_reservation_status"></span>
+                      <span class="guest-status {{ room.leaveStatusClass }}">{{ ::room.room_reservation_status }}</span>
                       <!-- Show only if applicable, {departure-time} can be time or 'out' if departed -->
-                      <span bo-text="room.timeOrOut"></span>
+                      <span>{{ ::room.timeOrOut }}</span>
                     </div>
                     <!-- {reservation-status} can be check-in(for arrival or arrived) or no-show(if room is not allocated to guest) -->
                     <div class="next {{ room.enterStatusClass }}">
-                      <span class="guest-status {{ room.enterStatusClass }}" bo-text="room.room_reservation_status"></span>
+                      <span class="guest-status {{ room.enterStatusClass }}">{{ ::room.room_reservation_status }}</span>
                       <!-- Show only if applicable, {arrival-time} can be time or 'IN' if arrived -->
-                      <span bo-text="room.timeOrIn"></span>
+                      <span>{{ ::room.timeOrIn }}</span>
                     </div>
                 </div>
 
@@ -170,16 +170,16 @@
                 </span>
 
                 <!-- Show only if room is occupied -->
-                <figure class="guest-image" bo-if="!room.is_queued && room.is_occupied">
-                    <span bo-if="room.is_vip" class="vip" translate>VIP</span>
-                    <img bo-src-i="{{room.avatar_src}}" alt="" />
+                <figure class="guest-image" ng-if="!room.is_queued && room.is_occupied">
+                    <span ng-if="room.is_vip" class="vip" translate>VIP</span>
+                    <img ng-src="{{::room.avatar_src}}" alt="" />
                 </figure>
 
                 <!-- Show only if room is vacant -->
-                <div bo-if="!room.is_queued && !room.is_occupied" class="show-vacant">VACANT</div>
+                <div ng-if="!room.is_queued && !room.is_occupied" class="show-vacant">VACANT</div>
 
                 <!-- Show only if room is queued -->
-                <div bo-if="room.is_queued" class="icons icon-queued has-time">
+                <div ng-if="room.is_queued" class="icons icon-queued has-time">
                     Queued
                     <span class="time" pretty-time-ago="room.is_queued_till"></span>
                 </div>
