CICO-31474: fixed the old issues

--- a/rover/partials/workManagement/rvWorkManagementMultiSheet.html
+++ b/rover/partials/workManagement/rvWorkManagementMultiSheet.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="entry actions">
-            <div class="action">
+            <div class="action" ng-hide="workSheetChanged">
                 <label translate>PRINT</label>
                 <button type="button" class="button blue with-icon only-icon"
                     ng-click="openPrintWorkSheetPopup()">
@@ -194,5 +194,3 @@
         </div>
     </section>
 </section>
-
-<ul class=""
