--- a/stylesheets/less/app/screens/15.work-management.less
+++ b/stylesheets/less/app/screens/15.work-management.less
@@ -425,6 +425,10 @@
                 right: 5px;
             }
 
+            .no-icon {
+                background: none !important;
+            }
+
             .vip {
                 font-size: 9px;
                 line-height: 20px;
