CICO-37895 Fixed the issues with SR rate display in popup

--- a/rover/partials/reservation/rvCustomRateSelectPopup.html
+++ b/rover/partials/reservation/rvCustomRateSelectPopup.html
@@ -5,9 +5,12 @@
 		    	<span class="icons icon-close invert">
 		    </button>
 
-		    <strong class="h3 message">Custom Rate of {{ currencySymbol }} {{ customRate }} applies to this reservation. Rate for current guest count is {{currencySymbol}} {{ rateForCurrentGuest }}
+		    <strong class="h3 message" ng-if="!isSRRate">Custom Rate of {{ currencySymbol }} {{ customRate }} applies to this reservation. Rate for current guest count is {{currencySymbol}} {{ rateForCurrentGuest }}
 		    </strong>
-		    
+
+		    <strong class="h3 message" ng-if="!!isSRRate">Custom Rate of SR applies to this reservation. Rate for current guest count is SR
+		    </strong>
+
 		    <div class="actions">
 
 		        <button type="button" ng-click="keepCurrentRate()" class="button green" translate>KEEP_CURRENT_RATE</button>
