--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1399,6 +1399,9 @@
             width: 56%;
             position: fixed;
         }
+        .ha {
+            display:none !important;
+        }
 /* OWS MSG POPUP */
 
 .ows-msg-number{
